[package]
name = "instance-bb"
version = "0.1.0"
authors = ["Luiz Alberto do Carmo Viana <luizalbertocviana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
instance = {path = "../instance"}
branch-bound = {path = "../branch-bound"}
graph = {path = "../graph"}
